# relab-rpi-cam-plugin

./: .dockerignore  .env.example  .env.standalone.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  INSTALL.md  README.md  codecov.yml  compose.yml  config.alloy  coverage.json  docker-compose.standalone.yml  docker-compose.yml  justfile  mediamtx.yml  pyproject.toml  renovate.json  setup.sh
.github/: dependabot.yml
.github/workflows/: audit-reusable.yml  ci.yml  lint-reusable.yml  models-check-reusable.yml  models-publish.yml  release.yml  test-reusable.yml
app/: __init__.py  __version__.py  lifespan.py  main.py  router.py
app/api/: __init__.py  exceptions.py
app/api/dependencies/: auth.py  camera_management.py
app/api/models/: camera.py  stream.py
app/api/plugins/: __init__.py
app/api/routers/: __init__.py  auth.py  camera.py  hls.py  images.py  local_access.py  local_key.py  main.py  metrics.py  setup.py  stream.py  telemetry.py  whep.py
app/api/schemas/: __init__.py  camera_controls.py  streaming.py
app/api/services/: __init__.py  _stubs.py  backend_client.py  backend_factory.py  camera_backend.py  camera_manager.py  hardware_protocols.py  hardware_stubs.py  mediamtx_client.py  pairing.py  pairing_client.py  picamera2_backend.py  preview_pipeline.py  relay.py  relay_state.py  stream.py  stream_service.py  stream_state.py  upload_queue.py
app/auth/: __init__.py  dependencies.py  router.py
app/backend/: __init__.py  client.py  contract_adapters.py  factory.py
app/camera/: __init__.py  dependencies.py  exceptions.py  router.py  schemas.py
app/camera/routers/: __init__.py  captures.py  controls.py  hls.py  stream.py
app/camera/services/: __init__.py  backend.py  hardware_protocols.py  manager.py  picamera2_backend.py
app/core/: __init__.py  bootstrap.py  config.py  lifespan.py  middleware.py  runtime.py  runtime_context.py  runtime_state.py  settings.py  templates_config.py
app/frontend/: __init__.py  router.py
app/image_sinks/: __init__.py  backend_sink.py  factory.py  s3_sink.py
app/media/: __init__.py  mediamtx_client.py  preview_pipeline.py  stream.py  stream_service.py  stream_state.py
app/observability/: __init__.py  logging.py  telemetry.py  tracing.py
app/pairing/: __init__.py  router.py
app/pairing/routers/: __init__.py  local_access.py  setup.py
app/pairing/services/: __init__.py  client.py  credentials.py  service.py
app/relay/: __init__.py  service.py
app/static/: site.js  styles.css
app/system/: __init__.py  router.py
app/system/routers/: __init__.py  telemetry.py
app/templates/: base.html  homepage.html  local_stream_viewer.html  login.html  setup.html  youtube_stream_viewer.html
app/upload/: __init__.py  queue.py
app/utils/: __init__.py  backend_client.py  device_jwt.py  files.py  logging.py  network.py  observability.py  pairing.py  preview_sleeper.py  relay.py  relay_state.py  tasks.py  telemetry.py  thermal_governor.py  upload_queue.py
app/workers/: __init__.py  preview_sleeper.py  preview_thumbnail.py  thermal_governor.py
docker/: mediamtx.Dockerfile
docker/alloy/: config.alloy
docker/loki/: config.yml
relab_rpi_cam_models/: README.md  pyproject.toml
relab_rpi_cam_models/src/relab_rpi_cam_models/: __init__.py  camera.py  device_seam.py  images.py  stream.py  telemetry.py  whep.py
scripts/: __init__.py  docker_entrypoint.sh  entrypoint.sh  generate__docker_device_mappings.py  generate_compose_override.py  generate_docker_compose_override.py  local_setup.sh  validate_models_package_tag.py
src/relab_rpi_cam_plugin/: main.py
src/relab_rpi_cam_plugin/core/: config.py
src/relab_rpi_cam_plugin/utils/: files.py  tasks.py
templates/: homepage.html  youtube_stream_viewer.html
tests/: __init__.py  conftest.py  constants.py  test_auth.py  test_camera.py  test_config.py  test_images.py  test_setup.py  test_stream.py  test_utils.py
tests/integration/: __init__.py  test_auth.py  test_camera.py  test_frontend.py  test_images.py  test_local_key.py  test_main_lifespan.py  test_metrics.py  test_setup.py  test_stream.py  test_telemetry.py
tests/support/: fakes.py
tests/unit/: __init__.py  test_auth_snapshot.py  test_backend_client.py  test_backend_factory.py  test_camera_management.py  test_config.py  test_config_relay.py  test_contract_adapters.py  test_device_jwt.py  test_exceptions.py  test_generate_compose_override.py  test_hardware_stubs.py  test_hls_router.py  test_local_access.py  test_logging.py  test_mediamtx_client.py  test_metrics.py  test_observability.py  test_pairing_flow.py  test_picamera2_backend.py  test_picamera2_backend_helpers.py  test_preview_pipeline.py  test_preview_sleeper.py  test_preview_thumbnail.py  test_relay.py  test_runtime.py  test_stream_model.py  test_stream_service.py  test_tasks.py  test_telemetry.py  test_test_support.py  test_thermal_governor.py  test_upload_queue.py  test_utils.py  test_whep.py  test_workflow_helpers.py
tests/unit/auth/: test_snapshot.py
tests/unit/backend/: __init__.py  test_client.py  test_contract_adapters.py  test_factory.py
tests/unit/camera/: __init__.py  test_exceptions.py  test_hardware_stubs.py  test_hls_router.py  test_manager.py  test_picamera2_backend.py  test_picamera2_backend_helpers.py
tests/unit/core/: test_config.py  test_contract_package.py  test_device_jwt.py  test_device_seam_models.py  test_generate_compose_override.py  test_logging.py  test_middleware.py  test_observability.py  test_runtime.py  test_utils.py
tests/unit/image_sinks/: test_backend_sink.py  test_factory.py  test_s3_sink.py
tests/unit/media/: __init__.py  test_mediamtx_client.py  test_preview_pipeline.py  test_preview_sleeper.py  test_preview_thumbnail.py  test_stream_service.py  test_thermal_governor.py
tests/unit/pairing/: __init__.py  test_flow.py  test_local_access.py
tests/unit/relay/: __init__.py  test_config.py  test_service.py
tests/unit/system/: test_metrics.py
tests/unit/test_image_sinks/: __init__.py  (+3 more)
typings/picamera2/: __init__.pyi  encoders.pyi  outputs.pyi
(+30 files in other folders)
